Fix error marker visibility

--- a/packages/delir/views/Timeline/Clip.styl
+++ b/packages/delir/views/Timeline/Clip.styl
@@ -23,6 +23,14 @@
         border 3px solid
         border-color $color-error transparent transparent $color-error
 
+    &.hasError::after
+        content ''
+        position absolute
+        left 0
+        top 0
+        border 4px solid
+        border-color #fff transparent transparent #fff
+
     &.video
         background-color #6034bd
 
